--- a/templates/rest/board.html
+++ b/templates/rest/board.html
@@ -4,20 +4,6 @@
 {% block content %}
 
 <table style='width:100%;'>
-        <td style='width:25%; text-align: center;'>
-                &nbsp;<img src="\static\icon\sashimi.png"><br><br>
-                &nbsp;<img src="\static\icon\burger.png"><br><br>
-                &nbsp;<img src="\static\icon\bibimbap.png"><br><br>
-                &nbsp;<img src="\static\icon\kimchi.png"><br><br>
-                &nbsp;<img src="\static\icon\rice.png"><br /><br>
-                &nbsp;<img src="\static\icon\noodles.png"><br><br>
-                &nbsp;<img src="\static\icon\sashimi.png"><br><br>
-                &nbsp;<img src="\static\icon\burger.png"><br><br>
-                &nbsp;<img src="\static\icon\bibimbap.png"><br><br>
-                &nbsp;<img src="\static\icon\kimchi.png"><br><br>
-                &nbsp;<img src="\static\icon\rice.png"><br /><br>
-                &nbsp;<img src="\static\icon\noodles.png">
-        </td>
         <td align= 'center'>
                 <style>
                         table {
@@ -30,7 +16,9 @@
                                 Program</font>&nbsp;
                         <img type='image/png' width="60" height="60" src='/static/icon/menu2.png' />&nbsp;
                 </div>
-                <div style='margin-top:50px'></div>
+                <!-- <button class='btn btn-outline-dark' onclick="location.href='/rest/search'">필터링</button> -->
+          
+                <div style='margin-top:20px'></div>
 
                 <table border="1" width="auto" height="350" align="center">
                         <tr align="center">
@@ -97,20 +85,7 @@
                         
                 </div>
         </td>
-        <td style='width:25%; text-align: center;'>
-                &nbsp;<img src="\static\icon\rice.png"><br /><br>
-                &nbsp;<img src="\static\icon\spaghetti.png"><br /><br>
-                &nbsp;<img src="\static\icon\taco.png"><br /><br>
-                &nbsp;<img src="\static\icon\takoyaki.png"><br /><br>
-                &nbsp;<img src="\static\icon\tempura.png"><br /><br>
-                &nbsp;<img src="\static\icon\onigiri.png"><br><br>
-                &nbsp;<img src="\static\icon\rice.png"><br /><br>
-                &nbsp;<img src="\static\icon\spaghetti.png"><br /><br>
-                &nbsp;<img src="\static\icon\taco.png"><br /><br>
-                &nbsp;<img src="\static\icon\takoyaki.png"><br /><br>
-                &nbsp;<img src="\static\icon\tempura.png"><br /><br>
-                &nbsp;<img src="\static\icon\onigiri.png">
-        </td>
+      
         </td>
 
 </table>
