--- a/static/css/default.css
+++ b/static/css/default.css
@@ -7,11 +7,10 @@
 	{
 		margin: 0px;
 		padding: 0px;
-		background: #181818;
-		font-family: 'Didact Gothic', sans-serif;
+		background: #f3d4a5;
+		font-family: 'Questrial', sans-serif;
 		font-size: 12pt;
-		font-weight: 200;
-		color: #FFF;
+		color: #E5EEFF;
 	}
 	
 	
@@ -19,6 +18,7 @@
 	{
 		margin: 0;
 		padding: 0;
+		color: #404040;
 	}
 	
 	p, ol, ul
@@ -43,7 +43,7 @@
 	
 	a
 	{
-		color: #ee0000;
+		color: #16A085;
 	}
 	
 	a:hover
@@ -51,13 +51,111 @@
 		text-decoration: none;
 	}
 	
+
 	.container
 	{
-		overflow: hidden;
-		margin: 0em auto;
+		margin: 0px auto;
 		width: 1200px;
 	}
 	
+
+/*********************************************************************************/
+/* Form Style                                                                    */
+/*********************************************************************************/
+
+		form
+		{
+		}
+		
+			form label
+			{
+				display: block;
+				text-align: left;
+				margin-bottom: 0.5em;
+			}
+			
+			form .submit
+			{
+				margin-top: 2em;
+				line-height: 1.5em;
+				font-size: 1.3em;
+			}
+		
+			form input.text,
+			form select,
+			form textarea
+			{
+				position: relative;
+				-webkit-appearance: none;
+				display: block;
+				border: 0;
+				background: #fff;
+				background: rgba(255,255,255,0.75);
+				width: 100%;
+				border-radius: 0.50em;
+				margin: 1em 0em;
+				padding: 1.50em 1em;
+				box-shadow: inset 0 0.1em 0.1em 0 rgba(0,0,0,0.05);
+				border: solid 1px rgba(0,0,0,0.15);
+				-moz-transition: all 0.35s ease-in-out;
+				-webkit-transition: all 0.35s ease-in-out;
+				-o-transition: all 0.35s ease-in-out;
+				-ms-transition: all 0.35s ease-in-out;
+				transition: all 0.35s ease-in-out;
+				font-size: 1em;
+				outline: none;
+			}
+
+				form input.text:hover,
+				form select:hover,
+				form textarea:hover
+				{
+				}
+
+				form input.text:focus,
+				form select:focus,
+				form textarea:focus
+				{
+					box-shadow: 0 0 2px 1px #E0E0E0;
+					background: #fff;
+				}
+				
+				form textarea
+				{
+					min-height: 12em;
+				}
+
+				form .formerize-placeholder
+				{
+					color: #555 !important;
+				}
+
+				form ::-webkit-input-placeholder
+				{
+					color: #555 !important;
+				}
+
+				form :-moz-placeholder
+				{
+					color: #555 !important;
+				}
+
+				form ::-moz-placeholder
+				{
+					color: #555 !important;
+				}
+
+				form :-ms-input-placeholder
+				{
+					color: #555 !important;
+				}
+
+				form ::-moz-focus-inner
+				{
+					border: 0;
+				}
+
+
 /*********************************************************************************/
 /* Image Style                                                                   */
 /*********************************************************************************/
@@ -65,6 +163,7 @@
 	.image
 	{
 		display: inline-block;
+		border: 1px solid rgba(0,0,0,.1);
 	}
 	
 	.image img
@@ -77,7 +176,7 @@
 	{
 		display: block;
 		width: 100%;
-		margin: 0 0 2em 0;
+		margin: 0 0 3em 0;
 	}
 	
 	.image-left
@@ -105,16 +204,6 @@
 	ul.style1
 	{
 	}
-	
-	ul.actions
-	{
-	}
-	
-	ul.actions li
-	{
-		display: inline-block;
-		padding: 0em 0.50em;
-	}
 
 
 /*********************************************************************************/
@@ -131,7 +220,7 @@
 	ul.contact li
 	{
 		display: inline-block;
-		padding: 0em 0.30em;
+		padding: 0em 0.10em;
 		font-size: 1em;
 	}
 	
@@ -150,20 +239,14 @@
 	ul.contact li a:before
 	{
 		display: inline-block;
-		background: #3f3f3f;
+		background: rgb(139, 228, 23);
 		width: 40px;
 		height: 40px;
 		line-height: 40px;
-		border-radius: 20px;
 		text-align: center;
-		color: #FFFFFF;
+		color: rgba(255,255,255,.5);
 	}
 	
-	ul.contact li a.icon-twitter:before { background: #2DAAE4; }
-	ul.contact li a.icon-facebook:before { background: #39599F; }
-	ul.contact li a.icon-dribbble:before { background: #C4376B;	}
-	ul.contact li a.icon-tumblr:before { background: #31516A; }
-	ul.contact li a.icon-rss:before { background: #F2600B; }
 
 /*********************************************************************************/
 /* Button Style                                                                  */
@@ -172,93 +255,33 @@
 	.button
 	{
 		display: inline-block;
-		padding: 1em 2em 1em 2em;
-		letter-spacing: 0.10em;
 		margin-top: 2em;
-		padding: 1.40em 3em;
-		background: #f3cc2f;
-		border-radius: 6px;
+		padding: 0.8em 2em;
+		background: #3E5A99;
+		line-height: 1.8em;
+		letter-spacing: 1px;
 		text-decoration: none;
-		font-weight: 700;
 		font-size: 1em;
-		color: #3f0900;
+		color: #FFF;
 	}
 	
-	.button-alt
+	.button:before
 	{
-		padding: 1em 2em;
-		border-color: rgba(0,0,0,.8);
+		display: inline-block;
+		background: #8DCB89;
+		margin-right: 1em;
+		width: 40px;
+		height: 40px;
+		line-height: 40px;
+		border-radius: 20px;
+		text-align: center;
+		color: #272925;
+	}
+	
+	.button-small
+	{
 	}
 		
-/*********************************************************************************/
-/* 4-column                                                                      */
-/*********************************************************************************/
-
-	.box1,
-	.box2,
-	.box3,
-	.box4
-	{
-		width: 235px;
-	}
-	
-	.box1,
-	.box2,
-	.box3,
-	{
-		float: left;
-		margin-right: 20px;
-	}
-	
-	.box4
-	{
-		float: right;
-	}
-	
-/*********************************************************************************/
-/* 3-column                                                                      */
-/*********************************************************************************/
-
-	.boxA,
-	.boxB,
-	.boxC
-	{
-		width: 384px;
-	}
-
-	.boxA,
-	.boxB
-	{
-		float: left;
-		margin-right: 20px;
-	}
-	
-	.boxC
-	{
-		float: right;
-	}
-
-/*********************************************************************************/
-/* 2-column                                                                      */
-/*********************************************************************************/
-
-	.tbox1,
-	.tbox2
-	{
-		width: 575px;
-	}
-	
-	.tbox1
-	{
-		float: left;
-	}
-
-	.tbox2
-	{
-		float: right;
-	}
-
-	
 /*********************************************************************************/
 /* Heading Titles                                                                */
 /*********************************************************************************/
@@ -270,24 +293,14 @@
 	
 	.title h2
 	{
-		font-size: 2.7em;
+		font-size: 2.8em;
+		color: #FFF;
 	}
 	
 	.title .byline
 	{
-		font-size: 1.3em;
-		color: rgba(255,255,255,0.60);
-	}
-
-/*********************************************************************************/
-/* Header                                                                        */
-/*********************************************************************************/
-
-	#wrapper
-	{
-		position: relative;
-		padding: 5em 0em 7em 0em;
-		background: #FFF;
+		font-size: 1.1em;
+		color: rgba(255,255,255,.5);
 	}
 
 /*********************************************************************************/
@@ -296,16 +309,13 @@
 
 	#header-wrapper
 	{
-		position: relative;
-		padding: 5em 0em 0em 0em;
-		background: #111111 url(images/pic01.jpg) no-repeat center;
-		background-size: cover;
+		overflow: hidden;
+		padding: 6em 0em 2em 0em;
 	}
 
 	#header
 	{
-		position: relative;
-		padding: 5em 0em 10em 0em;
+		text-align: center;
 	}
 
 /*********************************************************************************/
@@ -314,22 +324,36 @@
 
 	#logo
 	{
-		position: absolute;
-		top: 3.6em;
-		left: 0;
 	}
 	
 	#logo h1
 	{
-		font-size: 2.6em;
-		color: #79C255;
+		display: inline-block;
+		margin-bottom: 0.20em;
+		padding: 0.20em 0.9em;
+		font-size: 3.5em;
 	}
 	
 	#logo a
 	{
 		text-decoration: none;
+		color: #FFF;
+	}
+	
+	#logo span
+	{
+		padding-right: 0.5em;
+		text-transform: uppercase;
+		font-size: 0.90em;
 		color: rgba(255,255,255,1);
 	}
+
+	#logo span a
+	{
+		color: rgba(255,255,255,0.8);
+	}
+	
+	
 
 /*********************************************************************************/
 /* Menu                                                                          */
@@ -337,92 +361,127 @@
 
 	#menu
 	{
-		position: absolute;
-		top: 4.5em;
-		right: 0;
 	}
 	
 	#menu ul
 	{
 		display: inline-block;
+		padding: 0em 2em;
+		text-align: center;
 	}
 	
 	#menu li
 	{
-		display: block;
-		float: left;
-		text-align: center;
+		display: inline-block;
 	}
 	
 	#menu li a, #menu li span
 	{
-		padding: 1em 1.5em;
-		letter-spacing: 1px;
+		display: inline-block;
+		padding: 1.3em 1.5em;
 		text-decoration: none;
+		font-size: 0.90em;
+		font-weight: 600;
 		text-transform: uppercase;
-		font-size: 0.8em;
-		color: rgba(255,255,255,0.80);
+		outline: 0;
+		color: #FFF;
 	}
 	
 	#menu li:hover a, #menu li.active a, #menu li.active span
 	{
+		background: rgb(252, 253, 163);
 	}
 	
-	#menu .active a
+	#menu .current_page_item a
 	{
-		background: #f3cc2f;
-		border-radius: 6px;
-		color: rgba(255,255,255,1);
-		color: #3f0900;
+		color: #FFF;
 	}
 	
-	#menu .icon
-	{
-	}
 
 /*********************************************************************************/
 /* Banner                                                                        */
 /*********************************************************************************/
 
-	#banner-wrapper
-	{
-		padding: 5em 0em;
-		background: rgba(0,0,0,.8);
-	}
-
 	#banner
 	{
+	}
+
+/*********************************************************************************/
+/* Wrapper                                                                       */
+/*********************************************************************************/
+
+
+	.wrapper
+	{
+		overflow: hidden;
+		padding: 0em 0em 5em 0em;
+	}
+
+	#wrapper1
+	{
+		background: #FFF;
+	}
+
+	#wrapper2
+	{
+		overflow: hidden;
+		padding: 5em 0em;
+		text-align: center;
+	}
+
+	#wrapper3
+	{
+	}
+	
+	#wrapper4
+	{
+	}
+
+/*********************************************************************************/
+/* Welcome                                                                       */
+/*********************************************************************************/
+
+	#welcome
+	{
+		overflow: hidden;
+		width: 1200px;
+		padding: 2em 0px 0em 0px;
 		text-align: center;
 	}
 	
-	#banner .title h2
+	#welcome .content
 	{
-		font-size: 4em;
+		padding: 0em 8em;
 	}
 	
-	#banner .title .byline
+		#welcome .image
+		{
+			display: block;
+			padding-top: 3em;
+			border: none;
+		}
+
+	#welcome .title h2
 	{
-		font-size: 2em;
+		color: #FFF;
 	}
 	
-	#banner .button
+	#welcome a,
+	#welcome strong
 	{
-		margin-top: 2em;
-		padding: 1.40em 3em;
-		border-radius: 6px;
-		font-weight: 700;
-		font-size: 1em;
-		
-	}
-	
-	.banner
-	{
-		margin-bottom: 5em;
+		color: #C6C2C4;
 	}
 
 /*********************************************************************************/
 /* Page                                                                          */
 /*********************************************************************************/
+
+	#page-wrapper
+	{
+		overflow: hidden;
+		padding: 3em 0em 0em 0em;
+		text-align: center;
+	}
 
 	#page
 	{
@@ -434,6 +493,10 @@
 
 	#content
 	{
+		float: left;
+		width: 700px;
+		padding-right: 100px;
+		border-right: 1px solid rgba(0,0,0,.1);
 	}
 
 /*********************************************************************************/
@@ -442,6 +505,8 @@
 
 	#sidebar
 	{
+		float: right;
+		width: 350px;
 	}
 
 /*********************************************************************************/
@@ -450,6 +515,13 @@
 
 	#footer
 	{
+		text-align: center;
+	}
+
+	
+	#footer .title span
+	{
+		color: rgba(255,255,255,0.4);
 	}
 
 /*********************************************************************************/
@@ -460,82 +532,200 @@
 	{
 		overflow: hidden;
 		padding: 5em 0em;
-		border-top: 1px solid rgba(0,0,0,0.08);
+		border-top: 1px solid rgba(255,255,255,0.08);
+		text-align: center;
 	}
 	
 	#copyright p
 	{
-		text-align: center;
-		font-size: 1em;
-		color: rgba(255,255,255,0.3);
+		letter-spacing: 1px;
+		font-size: 0.90em;
+		color: rgba(255,255,255,0.6);
 	}
 	
 	#copyright a
 	{
 		text-decoration: none;
-		color: rgba(255,255,255,0.6);
+		color: rgba(255,255,255,0.8);
 	}
 
-
 /*********************************************************************************/
-/* Welcome                                                                       */
+/* Newsletter                                                                    */
 /*********************************************************************************/
 
-	#welcome
+	#newsletter
 	{
-		position: relative;
-		padding: 7em 0em 7em 0em;
-		background: #f3cc2f;
-		background-size: cover;
+		overflow: hidden;
+		padding: 8em 0em;
+		background: #EDEDED;
 		text-align: center;
 	}
 	
-	#welcome .container
+	#newsletter .title h2
 	{
-		width: 1000px;
-		padding: 0px 100px;
-		color: rgba(255,255,255,0.8);
+		color: rgba(0,0,0,0.8);
 	}
 	
-	#welcome a
+	#newsletter .content
 	{
+		width: 600px;
+		margin: 0px auto;
+	}
+	
+/*********************************************************************************/
+/* Portfolio                                                                     */
+/*********************************************************************************/
+
+	#portfolio
+	{
+	}
+	
+	#portfolio .box
+	{
+		text-align: center;
+	}
+	
+	#portfolio h3
+	{
+		display: block;
+		padding-bottom: 1em;
+		font-size: 1em;
 		color: rgba(255,255,255,1);
 	}
-	
-	#welcome .button
+
+	#portfolio .title
 	{
-		background: #FFF;
-		color: #3f0900;
+		text-align: center;
 	}
 
+	#portfolio .title h2
+	{
+		color: rgba(0,0,0,0.8);
+	}
+
+	.column1,
+	.column2,
+	.column3,
+	.column4
+	{
+		width: 282px;
+	}
+	
+	.column1,
+	.column2,
+	.column3
+	{
+		float: left;
+		margin-right: 24px;
+	}
+	
+	.column4
+	{
+		float: right;
+	}
 
 /*********************************************************************************/
-/* Extra                                                                         */
+/* Three Columns                                                                 */
 /*********************************************************************************/
 
 	#three-column
 	{
+		overflow: hidden;
 		text-align: center;
-		color: rgba(0,0,0,0.6);
 	}
-
-	#three-column .fa
+	
+	#three-column h2
 	{
+		margin: 1em 0em;
+		font-size: 1.5em;
+		font-weight: 700;
+	}
+	
+	#three-column .icon
+	{
+		position: relative;
 		display: block;
-		padding: 1em 0em;
-		color: rgba(0,0,0,1);
-		font-size: 2em;
+		margin: 0px auto 0.80em auto;
+		background: none;
+		line-height: 150px;
+		font-size: 4em;
+		width: 150px;
+		height: 150px;
+		border-radius: 100px;
+		border: 6px solid #67128F;
+		text-align: center;
+		color: #FFF;
+		
+	}
+		
+	#three-column #tbox1,
+	#three-column #tbox2,
+	#three-column #tbox3
+	{
+		float: left;
+		width: 320px;
+		padding: 80px 40px 80px 40px;
+	}
+	
+	#three-column .title
+	{
+		text-align: center;
 	}
 	
 	#three-column .title h2
 	{
-		font-weight: bold;
-		color: rgba(0,0,0,0.8);
+		font-size: 1.60em;
 	}
-
+	
 	#three-column .title .byline
 	{
-		text-align: center;
-		color: rgba(0,0,0,.5);
+		padding-top: 0.50em;
+		font-size: 0.90em;
+		color: #858585;
 	}
 
+	#three-column .arrow-down
+	{
+		border-top-color: #292929;
+	}
+	
+	
+	ul.tools
+	{
+		margin: 0;
+		padding: 0em 0em 0em 0em;
+		list-style: none;
+	}
+	
+	ul.tools li
+	{
+		display: inline-block;
+		padding: 0em .2em;
+		font-size: 4em;
+	}
+	
+	ul.tools li span
+	{
+		display: none;
+		margin: 0;
+		padding: 0;
+	}
+	
+	ul.tools li a
+	{
+		color: #FFF;
+	}
+	
+	ul.tools li a:before
+	{
+		display: inline-block;
+		background: #1ABC9C;
+		width: 120px;
+		height: 120px;
+		border-radius: 50%;
+		line-height: 120px;
+		text-align: center;
+		color: #FFFFFF;
+	}
+	
+	
