--- a/templates/rest/search.html
+++ b/templates/rest/search.html
@@ -26,49 +26,49 @@
             <div style='margin-top:30px'></div>
             <div class='input_chk' style="width:700px"> 
             
-                <input type="checkbox" name='cate[0]' value='한식' class='chk'>
+                <input type="checkbox" name='cate0' value='한식' class='chk'>
                 <label for='check' style="font-size:1.2em;">한식</label>&nbsp;&nbsp;
 
-                <input type="checkbox" name='cate[1]' value='중식' class='chk'>
+                <input type="checkbox" name='cate1' value='중식' class='chk'>
                 <label for='check' style="font-size:1.2em;">중식</label>&nbsp;&nbsp;
 
-                <input type="checkbox" name='cate[2]' value='양식' class='chk'>
+                <input type="checkbox" name='cate2' value='양식' class='chk'>
                 <label for='check' style="font-size:1.2em;">양식</label>&nbsp;&nbsp;
 
-                <input type="checkbox" name='cate[3]' value='일식' class='chk'>
+                <input type="checkbox" name='cate3' value='일식' class='chk'>
                 <label for='check' style="font-size:1.2em;">일식</label>
 
-                <input type="checkbox" name='cate[4]' value='간식' class='chk'>
+                <input type="checkbox" name='cate4' value='간식' class='chk'>
                 <label for='check' style="font-size:1.2em;">간식</label><br><br>
 
-                <input type="checkbox" name='cate[5]' value='도시락' class='chk'>
+                <input type="checkbox" name='cate5' value='도시락' class='chk'>
                 <label for='check' style="font-size:1.2em;">도시락</label>
 
-                <input type="checkbox" name='cate[6]' value='분식' class='chk'>
+                <input type="checkbox" name='cate6' value='분식' class='chk'>
                 <label for='check' style="font-size:1.2em;">분식</label>
 
-                <input type="checkbox" name='cate[7]' value='뷔페' class='chk'>
+                <input type="checkbox" name='cate7' value='뷔페' class='chk'>
                 <label for='check' style="font-size:1.2em;">뷔페</label>
 
-                <input type="checkbox" name='cate[8]' value='아시아음식' class='chk'>
+                <input type="checkbox" name='cate8' value='아시아음식' class='chk'>
                 <label for='check' style="font-size:1.2em;">아시아음식</label><br><br>
 
-                <input type="checkbox" name='cate[9]' value='술집' class='chk'>
+                <input type="checkbox" name='cate9' value='술집' class='chk'>
                 <label for='check' style="font-size:1.2em;">술집</label>
 
-                <input type="checkbox" name='cate[10]' value='치킨' class='chk'>
+                <input type="checkbox" name='cate10' value='치킨' class='chk'>
                 <label for='check' style="font-size:1.2em;">치킨</label>
 
-                <input type="checkbox" name='cate[11]' value='패밀리레스토랑' class='chk'>
+                <input type="checkbox" name='cate11' value='패밀리레스토랑' class='chk'>
                 <label for='check' style="font-size:1.2em;">패밀리레스토랑</label><br><br>
 
-                <input type="checkbox" name='cate[12]' value='패스트푸드' class='chk'>
+                <input type="checkbox" name='cate12' value='패스트푸드' class='chk'>
                 <label for='check' style="font-size:1.2em;">패스트푸드</label>
 
-                <input type="checkbox" name='cate[13]' value='퓨전요리' class='chk'>
+                <input type="checkbox" name='cate13' value='퓨전요리' class='chk'>
                 <label for='check' style="font-size:1.2em;">퓨전요리</label>
 
-                <input type="checkbox" name='cate[14]' value='카페' class='chk'>
+                <input type="checkbox" name='cate14' value='카페' class='chk'>
                 <label for='check' style="font-size:1.2em;">카페</label>
 
 
