--- a/templates/rest/base.html
+++ b/templates/rest/base.html
@@ -62,7 +62,7 @@
             <a class="nav-link" href="index">기능</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="board?no=1&search_word=" aria-disabled="true">목록</a>
+            <a class="nav-link" href="board?no=1&search_word=&cate0=한식&cate1=중식&cate2=양식&cate3=일식&cate4=간식&cate5=도시락&cate6=분식&cate7=뷔페&cate8=아시아음식&cate9=술집&cate10=치킨&cate11=패밀리레스토랑&cate12=패스트푸트&cate13=퓨전요리&cate14=카페&distance=1000" aria-disabled="true">목록</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="search">검색</a>
