--- a/templates/rest/board.html
+++ b/templates/rest/board.html
@@ -56,11 +56,11 @@
 
                 </table>
                 <div style='display: inline-block;margin-top: 20px;'>
-                        
+                        {% if leng != 0 %}
                                 <ul class="pagination" >
                                         <li class="page-item">
                                                 {% if no != 1 %}
-                                                <a class="page-link" href="?no={{subno}}&search_word={{search_word}}" aria-label="Previous">
+                                                <a class="page-link" href="?no={{subno}}&search_word={{search_word}}&cate0={{cate.0}}&cate1={{cate.1}}&cate2={{cate.2}}&cate3={{cate.3}}&cate4={{cate.4}}&cate5={{cate.5}}&cate6={{cate.6}}&cate7={{cate.7}}&cate8={{cate.8}}&cate9={{cate.9}}&cate10={{cate.10}}&cate11={{cate.11}}&cate12={{cate.12}}&cate13={{cate.13}}&cate14={{cate.14}}&distance={{cate.15}}" aria-label="Previous">
                                                         <span aria-hidden="true">&laquo;</span>
                                                 </a>
                                                 {% endif %}
@@ -74,8 +74,10 @@
                                                                 class="page-link">{{i}}<span
                                                                         class="sr-only"></span></span></li>
                                                 {% else %}
-                                                <li class="page-item"><a class="page-link" href="?no={{i}}&search_word={{search_word}}">{{i}}</a>
+                                                <!-- <li class="page-item"><a class="page-link" href="?no={{i}}&search_word={{search_word}}&cate[0]={{cate.0}}&cate[1]={{cate.1}}&cate[2]={{cate.2}}&cate[3]={{cate.3}}&cate[4]={{cate.4}}&cate[5]={{cate.5}}&cate[6]={{cate.6}}&cate[7]={{cate.7}}&cate[8]={{cate.8}}&cate[9]={{cate.9}}&cate[10]={{cate.10}}&cate[11]={{cate.11}}&cate[12]={{cate.12}}&cate[13]={{cate.13}}&cate[14]={{cate.14}}&dist={{cate.15}}">{{i}}</a> -->
+                                                        <li class="page-item"><a class="page-link" href="?no={{i}}&search_word={{search_word}}&cate0={{cate.0}}&cate1={{cate.1}}&cate2={{cate.2}}&cate3={{cate.3}}&cate4={{cate.4}}&cate5={{cate.5}}&cate6={{cate.6}}&cate7={{cate.7}}&cate8={{cate.8}}&cate9={{cate.9}}&cate10={{cate.10}}&cate11={{cate.11}}&cate12={{cate.12}}&cate13={{cate.13}}&cate14={{cate.14}}&distance={{cate.15}}">{{i}}</a>
                                                 </li>
+                                                
                                                 {% endif %}
 
 
@@ -86,7 +88,7 @@
 
                                         <li class="page-item">
                                                 {% if no != leng %}
-                                                <a class="page-link" href="?no={{addno}}&search_word={{search_word}}" aria-label="Next">
+                                                <a class="page-link" href="?no={{addno}}&search_word={{search_word}}&cate0={{cate.0}}&cate1={{cate.1}}&cate2={{cate.2}}&cate3={{cate.3}}&cate4={{cate.4}}&cate5={{cate.5}}&cate6={{cate.6}}&cate7={{cate.7}}&cate8={{cate.8}}&cate9={{cate.9}}&cate10={{cate.10}}&cate11={{cate.11}}&cate12={{cate.12}}&cate13={{cate.13}}&cate14={{cate.14}}&distance={{cate.15}}" aria-label="Next">
                                                         <span aria-hidden="true">&raquo;</span>
 
 
@@ -94,7 +96,7 @@
                                                 {% endif %}
                                         </li>
                                 </ul>
-                        
+                        {% endif %}
                 </div>
         </td>
         <td style='width:25%; text-align: center;'>
