--- a/templates/rest/index.html
+++ b/templates/rest/index.html
@@ -58,7 +58,7 @@
             <font size="30em" face="" color="Black" >주요기능</font>
             <img type='image/png' width="60" height="60" src='/static/icon/menu2.png'/>&nbsp;<br>
             <div style='margin-top:40px'></div>
-          <button class='btn btn-outline-dark' onclick="location.href='/rest/board'">리스트</button>
+          <button class='btn btn-outline-dark' onclick="location.href='/rest/board?no=1&search_word=&cate0=한식&cate1=중식&cate2=양식&cate3=일식&cate4=간식&cate5=도시락&cate6=분식&cate7=뷔페&cate8=아시아음식&cate9=술집&cate10=치킨&cate11=패밀리레스토랑&cate12=패스트푸트&cate13=퓨전요리&cate14=카페&distance=1000'">리스트</button>
           <button class='btn btn-outline-dark'>부산대 주변 모든 음식점을 보실 수 있습니다.</button>
           <div style='margin-top:50px'></div>
           <button class='btn btn-outline-dark' onclick="location.href='/rest/search'">필터링</button>
