--- a/templates/rest/detail.html
+++ b/templates/rest/detail.html
@@ -3,19 +3,8 @@
 
 {% block content %}
 <html lang="en">
-<head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link href="static/css/mystyle.css" rel="stylesheet" />
-        <title>Detail</title>
-        <link href='/static/css/bootstrap.min.css' rel='stylesheet' />
-</head>
 <body>
-    
-    <tr>
-    pic
-    </tr>
+<img src="/static/icon/menu1.png" width="370px" height="370px">
 </body>
 </html>
 {% endblock %}
