--- a/templates/rest/detail.html
+++ b/templates/rest/detail.html
@@ -4,7 +4,36 @@
 {% block content %}
 <html lang="en">
 <body>
-<img src="/static/icon/menu1.png" width="370px" height="370px">
+    <div align="center"><img src="/static/icon/menu1.png" width="370px" height="370px" ></div>
+    <div style='margin-top:20px'></div>
+    <table border="6" width="500px" height="700px" align="center">
+        <tr align="center" style="color: black; font-style: Comic Sans MS;">
+            <td style="width: 70px;">식당명</td>
+            <td style="width: 70px;">content</td>
+        </tr>
+        <tr align="center" style="color: black;">
+            <td style="width: 70px;">전화번호</td>
+            <td style="width: 70px;">content</td>
+        </tr>
+        <tr align="center" style="color: black;">
+            <td style="width: 70px;">주소</td>
+            <td style="width: 70px;">content</td>
+        </tr>
+        <tr align="center" style="color: black;">
+            <td style="width: 70px;">메뉴</td>
+            <td style="width: 70px;">content</td>
+        </tr>
+        <tr align="center" style="color: black;">
+            <td style="width: 70px;">휴무여부</td>
+            <td style="width: 70px;">content</td>
+        </tr>
+        <tr align="center" style="color: black;">
+            <td style="width: 70px;">주소</td>
+            <td style="width: 70px;">content</td>
+        </tr>
+        
+    </table>
+    <div style='margin-top: 50px;'></div>
 </body>
 </html>
 {% endblock %}
