--- a/templates/rest/home.html
+++ b/templates/rest/home.html
@@ -18,16 +18,16 @@
         <header class="masthead mb-auto">
           
           <div id="logo">
-            <font size='10' color="navy">R &nbsp;. &nbsp;I &nbsp;. &nbsp;P</font>
+            <font size='10' color="black" face='Comic Sans MS'>R &nbsp;. &nbsp;I &nbsp;. &nbsp;P</font>
             <div style="margin-top: 10px;"></div>
-            <h3 style="color: navy;">Restaurant &nbsp;&nbsp;&nbsp;&nbsp;In &nbsp;&nbsp;&nbsp;&nbsp;Program</h3>
+            <font size='7' color= "black" face='Comic Sans MS'>Restaurant &nbsp;&nbsp;&nbsp;&nbsp;In &nbsp;&nbsp;&nbsp;&nbsp;Program</font>
             <div style='margin-top:30px'></div>
 
 			<div id="menu">
 				<ul>
-					<li><a href="index"><font size='4' color="navy">R I P 만의 기능</font></a></li>
-					<li><a href="board"><font size='4' color="navy">부대 모든 음식점</font></a></li>
-					<li><a href="search"><font size='4' color="navy">직접검색</font></a></li>
+					<li><a href="index"><font size='4' color="black" face='Comic Sans MS'>R I P 만의 기능</font></a></li>
+					<li><a href="board"><font size='4' color="black" face='Comic Sans MS'>부대 모든 음식점</font></a></li>
+					<li><a href="search"><font size='4' color="black" face='Comic Sans MS'>직접검색</font></a></li>
 				</ul>
 			</div>
 		</div>
@@ -42,9 +42,10 @@
     
             <!-- <img src="/static/icon/menu1.png" onclick="location.href='/rest/index'"> -->
             <img src="/static/icon/menu1.png" width="370px" height="370px" onclick="location.href='/rest/index'">
-            <h3 class="cover-heading" style='margin-top:50px; color:navy'>Welcome to R I P</h3>
-            <p class="lead" style="color: navy;"><img src="\static\icon\onigiri.png" width="60px" height="60px" >&nbsp;&nbsp; 여러분의 점심시간을 한층 여유롭게 만들어줄 사이트입니다! &nbsp;&nbsp;<img src="\static\icon\onigiri.png" width="60px" height="60px"></p>
-          </div>
+            <div style="margin-top: 30px;"></div>
+            <font face='Comic Sans MS' class="cover-heading" style='margin-top:30px; color:black'>Welcome to R I P</font>
+            <p class="lead" style="color: black;"><img src="\static\icon\onigiri.png" width="60px" height="60px" >&nbsp;&nbsp; 여러분의 점심시간을 한층 여유롭게 만들어줄 사이트입니다! &nbsp;&nbsp;<img src="\static\icon\onigiri.png" width="60px" height="60px"></p>
+          
           
         </p>
         </main>
