--- a/templates/rest/base.html
+++ b/templates/rest/base.html
@@ -36,7 +36,7 @@
       }
     }
     body{
-      background-image: url('/static/icon/배경사진.png');
+      background-image: url("/static/icon/배경사진.png");
       background-size: cover;
       background-repeat: no-repeat;
       
@@ -47,9 +47,9 @@
 
 </head>
 
-
-  <div class='container' align='center' style='margin-top:80px;'>
-    <nav class="navbar navbar-expand navbar-white fixed-top" >
+<body>
+  <div class='container' align='center'>
+    <nav class="navbar navbar-expand navbar-white" >
       <img type='image/png' width="32" height="32" src='/static/icon/menu2.png'/>
       <a class="navbar-brand" href="/rest/home" style="margin-left:10px;"><font size='6' face='Comic Sans MS' color='navy'><strong>R.I.P</strong></font></a>
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
