--- a/templates/rest/index.html
+++ b/templates/rest/index.html
@@ -52,7 +52,7 @@
             <p class="lead">
               <div class='container' width='600px'>
                 <img type='image/png' width="60" height="60" src='/static/icon/menu2.png' />&nbsp;
-                <font size="30em" face="바탕" color="Black">주요기능</font>
+                <font size="30.2em" face="Comic Sans MS" color="Black">&nbsp; 주요기능 &nbsp;</font>
                 <img type='image/png' width="60" height="60" src='/static/icon/menu2.png' />&nbsp;<br>
                 <div style='margin-top:40px'></div>
                 <button class='btn btn-outline-dark' onclick="location.href='/rest/board'">리스트</button>
