--- a/templates/rest/search.html
+++ b/templates/rest/search.html
@@ -22,12 +22,13 @@
                 <img src="\static\icon\삼겹살.jpg" style="width:120px; height:120px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <img src="\static\icon\두루치기.jpg" style="width:120px; height:120px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <div class="container" align='center' style='margin-top:150px; width:700px'>
-            <button type="button" style="width:370px; height:50px;" class="btn btn-secondary">음식 카테고리를 선택하세요 (복수선택 가능)</button>
+            <button type="button" style="width:320px; height:50px;" class="btn btn-light">카테고리를 선택하세요 (복수선택 가능)</button>
             <div style='margin-top:30px'></div>
-            <div class='input_chk' style="width:700px"> 
+            <div class='input_chk' style="width:700px; color: black;"> 
             
+                
                 <input type="checkbox" name='cate0' value='한식' class='chk'>
-                <label for='check' style="font-size:1.2em;">한식</label>&nbsp;&nbsp;
+                <label for='check' style="font-size:1.2em; ">한식</label>&nbsp;&nbsp;
 
                 <input type="checkbox" name='cate1' value='중식' class='chk'>
                 <label for='check' style="font-size:1.2em;">중식</label>&nbsp;&nbsp;
