--- a/templates/rest/home.html
+++ b/templates/rest/home.html
@@ -26,7 +26,7 @@
 			<div id="menu">
 				<ul>
 					<li><a href="index"><font size='4' color="black" face='Comic Sans MS'>R I P 만의 기능</font></a></li>
-					<li><a href="board"><font size='4' color="black" face='Comic Sans MS'>부대 모든 음식점</font></a></li>
+					<li><a href="board?no=1&search_word=&cate0=한식&cate1=중식&cate2=양식&cate3=일식&cate4=간식&cate5=도시락&cate6=분식&cate7=뷔페&cate8=아시아음식&cate9=술집&cate10=치킨&cate11=패밀리레스토랑&cate12=패스트푸트&cate13=퓨전요리&cate14=카페&distance=1000"><font size='4' color="black" face='Comic Sans MS'>부대 모든 음식점</font></a></li>
 					<li><a href="search"><font size='4' color="black" face='Comic Sans MS'>직접검색</font></a></li>
 				</ul>
 			</div>
